# Centix

./: .gitignore  Centix.code-workspace  README.md
.github/workflows/: devskim.yml  rust.yml
app/: App.xaml  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  Centix.csproj  Centix.sln  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs
backend/: Cargo.toml
backend/src/: config.rs  main.rs
backend/src/apis/: admin.rs  media.rs  service.rs  stats.rs  user.rs
backend/src/database/: database.rs  database_utils.rs
frontend/: Program.cs  frontend.csproj  frontend.sln
frontend/Analytics/: Analytics.cs  AnalyticsApi.cs  AnalyticsMiddleware.cs
frontend/Api/: ApiUtils.cs
frontend/Api/Models/: ModelConfig.cs  ModelError.cs  ModelMediaStats.cs  ModelUserKey.cs  ModelUserList.cs  ModelUserStats.cs
frontend/Api/Models/Media/: ModelContentInfo.cs  ModelMedia.cs  ModelMediaFound.cs  ModelMediaSearch.cs
frontend/Api/Models/Service/: ModelConfig.cs  ModelInformation.cs
frontend/Api/Models/Stats/: ModelMediaStats.cs  ModelUserStats.cs
frontend/Api/Models/User/: ModelError.cs  ModelUserCredentials.cs  ModelUserInfo.cs  ModelUserKey.cs  ModelUserList.cs  ModelUserRegistration.cs  ModelUserStats.cs
frontend/Api/Models/User/Login/: ModelLoginResponse.cs
frontend/Config/: Config.cs  ConfigManager.cs
frontend/Controllers/: DownloadController.cs  LoginController.cs  SignupController.cs  ThumbnailController.cs
frontend/Models/: DownloadModel.cs  ThumbnailModel.cs
frontend/Models/Account/: LoginModel.cs  SignupModel.cs
frontend/Properties/: launchSettings.json
frontend/Utils/: CookieUtils.cs  QueryUtils.cs  StringUtils.cs  ViewLocationExpansion.cs
frontend/Web/: FrontendServer.cs
frontend/Web/Assets/css/: color.css  other.css
frontend/Web/Assets/css/Account/: Account.css  Information.css  Posts.css  Stats.css
frontend/Web/Assets/css/Account/Login/: Login.css
frontend/Web/Assets/css/Account/Signup/: Signup.css
frontend/Web/Assets/css/Codes/: Error.css
frontend/Web/Assets/css/Generic/: Container.css
frontend/Web/Assets/css/Index/: Announcement.css  Content.css  Index.css  Stats.css
frontend/Web/Assets/css/Layout/: Layout.css  Navbar.css
frontend/Web/Assets/css/Post/: Post.css
frontend/Web/Assets/css/Posts/: Large.css  Post.css  Posts.css  Small.css  Sorting.css  Uploads.css
frontend/Web/Assets/css/Uploads/: Post.css  Small.css
frontend/Web/Assets/font/: Font.css
frontend/Web/Assets/js/Posts/: Posts.js
frontend/Web/Pages/: Admin.cshtml  Admin.cshtml.cs  Index.cshtml  Index.cshtml.cs  Post.cshtml  Post.cshtml.cs  Posts.cshtml  Posts.cshtml.cs  Uploads.cshtml  Uploads.cshtml.cs  _Layout.cshtml  _Layout.cshtml.cs
frontend/Web/Pages/Account/: Account.cshtml  Account.cshtml.cs  Delete.cshtml  Delete.cshtml.cs  Login.cshtml  Login.cshtml.cs  Signup.cshtml  Signup.cshtml.cs
frontend/Web/Pages/Account/Posts/: Purge.cshtml  Purge.cshtml.cs
frontend/Web/Pages/Account/Reset/: Password.cshtml  Password.cshtml.cs  Username.cshtml  Username.cshtml.cs
frontend/Web/Pages/Codes/: Error.cshtml  Error.cshtml.cs  NotFound.cshtml
(+3 files in other folders)
