[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies] 
# Web framework
rocket = { version = "0.5.0-rc.2", features = ["json"] }
# OpenAPI/Swagger
utoipa = { version = "2.3.0", features = ["rocket_extras"] }
utoipa-swagger-ui = { version = "2.0.1", features = ["rocket"] }
# Serde & Json
serde = { version = "1.0.85", features = ["derive"] }
serde_json = "1.0.85"
# Logging
env_logger = "0.9.0"
log = "0.4"
# Database
sled = "0.34.7"
# Randomization
rand = "0.8.5"
# Dates & Timings 
chrono = { version = "0.4.22", features = ["serde"] }
# Password hashing
pbkdf2 = "0.10"
rand_core = { version = "0.6.4", features = ["std"] }
# Base 64 Encoding & Decoding
base64 = "0.13.0"
# Mime Type & Magic detection  
infer = { version = "0.3", default-features = false }
# Lossless Compression
flate2 = "1.0.24"