[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies] 
# Web framework
rocket = { version = "0.5.0-rc.2", features = ["json"] }
# OpenAPI/Swagger
utoipa = { version = "3.0.2", features = ["rocket_extras"] }
utoipa-swagger-ui = { version = "3.0.2", features = ["rocket"] }
# Serde & Json
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
# Logging
env_logger = "0.10.0"
log = "0.4.17"
# Database
sled = "0.34.7"
# Randomization
rand = "0.8.5"
# Dates & Timings 
chrono = { version = "0.4.23", features = ["serde"] }
# Password hashing
pbkdf2 = "0.11"
rand_core = { version = "0.6.4", features = ["std"] }
# Base 64 Encoding & Decoding
# TODO: Bump major revisions 0.13.1 -> 0.21.0
base64 = "0.13.1"
# Mime Type & Magic detection  
infer = { version = "0.12.0", default-features = false }
# Lossless Compression
flate2 = "1.0.25"
# Iterator tools
itertools = "0.10.5"
# Git Information
git-version = "0.3.5"
# Analytics
rocket-analytics = "1.1.0"